--- a/requirements.txt
+++ b/requirements.txt
@@ -4,21 +4,49 @@
 #
 #    pip-compile --output-file=requirements.txt requirements.in
 #
+contourpy==1.0.7
+    # via matplotlib
+cycler==0.11.0
+    # via matplotlib
+fonttools==4.38.0
+    # via matplotlib
+joblib==1.2.0
+    # via scikit-learn
+kiwisolver==1.4.4
+    # via matplotlib
+matplotlib==3.7.0
+    # via -r requirements.in
 numpy==1.24.1
     # via
     #   -r requirements.in
+    #   contourpy
+    #   matplotlib
     #   pandas
+    #   scikit-learn
+    #   scipy
+packaging==23.0
+    # via matplotlib
 pandas==1.5.3
     # via -r requirements.in
+pillow==9.4.0
+    # via matplotlib
 plotly==5.13.0
     # via -r requirements.in
+pyparsing==3.0.9
+    # via matplotlib
 python-dateutil==2.8.2
-    # via pandas
+    # via
+    #   matplotlib
+    #   pandas
 pytz==2022.7.1
     # via pandas
+scikit-learn==1.2.1
+    # via -r requirements.in
+scipy==1.10.1
+    # via scikit-learn
 six==1.16.0
     # via python-dateutil
-sklearn==0.0.post1
-    # via -r requirements.in
 tenacity==8.1.0
     # via plotly
+threadpoolctl==3.1.0
+    # via scikit-learn
