BA in Transformer

--- a/requirements.txt
+++ b/requirements.txt
@@ -4,12 +4,18 @@
 #
 #    pip-compile --output-file=requirements.txt requirements.in
 #
+certifi==2022.12.7
+    # via requests
+charset-normalizer==3.0.1
+    # via requests
 contourpy==1.0.7
     # via matplotlib
 cycler==0.11.0
     # via matplotlib
 fonttools==4.38.0
     # via matplotlib
+idna==3.4
+    # via requests
 joblib==1.2.0
     # via scikit-learn
 kiwisolver==1.4.4
@@ -32,14 +38,20 @@ pillow==9.4.0
     # via matplotlib
 plotly==5.13.0
     # via -r requirements.in
+py4j==0.10.9.5
+    # via pyspark
 pyparsing==3.0.9
     # via matplotlib
+pyspark==3.3.2
+    # via -r requirements.in
 python-dateutil==2.8.2
     # via
     #   matplotlib
     #   pandas
 pytz==2022.7.1
     # via pandas
+requests==2.28.2
+    # via -r requirements.in
 scikit-learn==1.2.1
     # via -r requirements.in
 scipy==1.10.1
@@ -50,3 +62,5 @@ tenacity==8.1.0
     # via plotly
 threadpoolctl==3.1.0
     # via scikit-learn
+urllib3==1.26.14
+    # via requests
