--- a/requirements.txt
+++ b/requirements.txt
@@ -15,19 +15,31 @@ joblib==1.2.0
 kiwisolver==1.4.4
     # via matplotlib
 matplotlib==3.7.0
-    # via -r requirements.in
+    # via
+    #   -r requirements.in
+    #   seaborn
 numpy==1.24.1
     # via
     #   -r requirements.in
     #   contourpy
     #   matplotlib
     #   pandas
+    #   patsy
     #   scikit-learn
     #   scipy
+    #   seaborn
+    #   statsmodels
 packaging==23.0
-    # via matplotlib
+    # via
+    #   matplotlib
+    #   statsmodels
 pandas==1.5.3
-    # via -r requirements.in
+    # via
+    #   -r requirements.in
+    #   seaborn
+    #   statsmodels
+patsy==0.5.3
+    # via statsmodels
 pillow==9.4.0
     # via matplotlib
 plotly==5.13.0
@@ -43,9 +55,17 @@ pytz==2022.7.1
 scikit-learn==1.2.1
     # via -r requirements.in
 scipy==1.10.1
-    # via scikit-learn
+    # via
+    #   scikit-learn
+    #   statsmodels
+seaborn==0.12.2
+    # via -r requirements.in
 six==1.16.0
-    # via python-dateutil
+    # via
+    #   patsy
+    #   python-dateutil
+statsmodels==0.13.5
+    # via -r requirements.in
 tenacity==8.1.0
     # via plotly
 threadpoolctl==3.1.0
