--- a/requirements.txt
+++ b/requirements.txt
@@ -10,10 +10,14 @@ cycler==0.11.0
     # via matplotlib
 fonttools==4.38.0
     # via matplotlib
+jinja2==3.1.2
+    # via -r requirements.in
 joblib==1.2.0
     # via scikit-learn
 kiwisolver==1.4.4
     # via matplotlib
+markupsafe==2.1.2
+    # via jinja2
 matplotlib==3.7.0
     # via
     #   -r requirements.in
