--- a/requirements.txt
+++ b/requirements.txt
@@ -4,12 +4,24 @@
 #
 #    pip-compile --output-file=requirements.txt requirements.in
 #
+asttokens==2.2.1
+    # via stack-data
+backcall==0.2.0
+    # via ipython
 contourpy==1.0.7
     # via matplotlib
 cycler==0.11.0
     # via matplotlib
+decorator==5.1.1
+    # via ipython
+executing==1.2.0
+    # via stack-data
 fonttools==4.38.0
     # via matplotlib
+ipython==8.11.0
+    # via -r requirements.in
+jedi==0.18.2
+    # via ipython
 jinja2==3.1.2
     # via -r requirements.in
 joblib==1.2.0
@@ -22,6 +34,8 @@ matplotlib==3.7.0
     # via
     #   -r requirements.in
     #   seaborn
+matplotlib-inline==0.1.6
+    # via ipython
 numpy==1.24.1
     # via
     #   -r requirements.in
@@ -42,12 +56,26 @@ pandas==1.5.3
     #   -r requirements.in
     #   seaborn
     #   statsmodels
+parso==0.8.3
+    # via jedi
 patsy==0.5.3
     # via statsmodels
+pexpect==4.8.0
+    # via ipython
+pickleshare==0.7.5
+    # via ipython
 pillow==9.4.0
     # via matplotlib
 plotly==5.13.0
     # via -r requirements.in
+prompt-toolkit==3.0.38
+    # via ipython
+ptyprocess==0.7.0
+    # via pexpect
+pure-eval==0.2.2
+    # via stack-data
+pygments==2.14.0
+    # via ipython
 pyparsing==3.0.9
     # via matplotlib
 python-dateutil==2.8.2
@@ -68,9 +96,17 @@ six==1.16.0
     # via
     #   patsy
     #   python-dateutil
+stack-data==0.6.2
+    # via ipython
 statsmodels==0.13.5
     # via -r requirements.in
 tenacity==8.1.0
     # via plotly
 threadpoolctl==3.1.0
     # via scikit-learn
+traitlets==5.9.0
+    # via
+    #   ipython
+    #   matplotlib-inline
+wcwidth==0.2.6
+    # via prompt-toolkit
