--- a/requirements.in
+++ b/requirements.in
@@ -3,12 +3,11 @@ pandas
 plotly
 scikit-learn
 matplotlib
-<<<<<<< HEAD
 seaborn
 statsmodels
 jinja2
 IPython
-=======
->>>>>>> c77b215f33d6fd1332781746a2b37f0b87eca85d
+scipy
 pyspark
-mariadb
+nbformat >=4.2.0
+pretty_html_table
