--- a/requirements.txt
+++ b/requirements.txt
@@ -6,14 +6,10 @@
 #
 asttokens==2.2.1
     # via stack-data
+attrs==22.2.0
+    # via jsonschema
 backcall==0.2.0
     # via ipython
-
-certifi==2022.12.7
-    # via requests
-charset-normalizer==3.0.1
-    # via requests
-
 contourpy==1.0.7
     # via matplotlib
 cycler==0.11.0
@@ -22,21 +18,22 @@ decorator==5.1.1
     # via ipython
 executing==1.2.0
     # via stack-data
+fastjsonschema==2.16.3
+    # via nbformat
 fonttools==4.38.0
     # via matplotlib
-
 ipython==8.11.0
     # via -r requirements.in
 jedi==0.18.2
     # via ipython
 jinja2==3.1.2
     # via -r requirements.in
-
-idna==3.4
-    # via requests
-
 joblib==1.2.0
     # via scikit-learn
+jsonschema==4.17.3
+    # via nbformat
+jupyter-core==5.3.0
+    # via nbformat
 kiwisolver==1.4.4
     # via matplotlib
 markupsafe==2.1.2
@@ -47,6 +44,8 @@ matplotlib==3.7.0
     #   seaborn
 matplotlib-inline==0.1.6
     # via ipython
+nbformat==5.8.0
+    # via -r requirements.in
 numpy==1.24.1
     # via
     #   -r requirements.in
@@ -65,6 +64,7 @@ packaging==23.0
 pandas==1.5.3
     # via
     #   -r requirements.in
+    #   pretty-html-table
     #   seaborn
     #   statsmodels
 parso==0.8.3
@@ -77,23 +77,26 @@ pickleshare==0.7.5
     # via ipython
 pillow==9.4.0
     # via matplotlib
+platformdirs==3.1.1
+    # via jupyter-core
 plotly==5.13.0
     # via -r requirements.in
-
+pretty-html-table==0.9.16
+    # via -r requirements.in
 prompt-toolkit==3.0.38
     # via ipython
 ptyprocess==0.7.0
     # via pexpect
 pure-eval==0.2.2
     # via stack-data
-pygments==2.14.0
-    # via ipython
-
 py4j==0.10.9.5
     # via pyspark
-
+pygments==2.14.0
+    # via ipython
 pyparsing==3.0.9
     # via matplotlib
+pyrsistent==0.19.3
+    # via jsonschema
 pyspark==3.3.2
     # via -r requirements.in
 python-dateutil==2.8.2
@@ -102,12 +105,11 @@ python-dateutil==2.8.2
     #   pandas
 pytz==2022.7.1
     # via pandas
-requests==2.28.2
-    # via -r requirements.in
 scikit-learn==1.2.1
     # via -r requirements.in
 scipy==1.10.1
     # via
+    #   -r requirements.in
     #   scikit-learn
     #   statsmodels
 seaborn==0.12.2
@@ -124,14 +126,11 @@ tenacity==8.1.0
     # via plotly
 threadpoolctl==3.1.0
     # via scikit-learn
-
 traitlets==5.9.0
     # via
     #   ipython
+    #   jupyter-core
     #   matplotlib-inline
+    #   nbformat
 wcwidth==0.2.6
     # via prompt-toolkit
-
-urllib3==1.26.14
-    # via requests
-
